kube/services/netpolicy/portal_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-portal
spec:
  podSelector:
    matchLabels:
      app: portal 
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: portal
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: portal
      - podSelector:
          matchLabels:
            app: revproxy

  policyTypes:
   - Ingress
   - Egress
